--- a/Wpf_core_diploma/MainWindow.xaml
+++ b/Wpf_core_diploma/MainWindow.xaml
@@ -78,6 +78,7 @@
             <Frame x:Name="FrMain" Margin="10 10 10 10 "  NavigationUIVisibility="Hidden">
 
             </Frame>
+            <Button Click="clBackFrame" VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
         </Grid>
     </Grid>
 </Window>
