--- a/Wpf_core_diploma/MainWindow.xaml
+++ b/Wpf_core_diploma/MainWindow.xaml
@@ -78,7 +78,7 @@
             <Frame x:Name="FrMain" Margin="10 10 10 10 "  NavigationUIVisibility="Hidden">
 
             </Frame>
-            <Button Click="clBackFrame" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="20 0 0 20">
+            <Button x:Name="btFrameBacks" Click="clBackFrame" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="20 0 0 20">
                 <Button.Content>
                     <materialDesign:PackIcon Kind="ArrowBack" Foreground="#FFFFFF"/>
                 </Button.Content>
