--- a/Wpf_core_diploma/Pages/pgItemManager.xaml
+++ b/Wpf_core_diploma/Pages/pgItemManager.xaml
@@ -12,7 +12,7 @@
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="LightBlue" SecondaryColor="Lime"/>
+                <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="LightBlue" SecondaryColor="Red"/>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
@@ -24,7 +24,73 @@
             <RowDefinition Height="83*"/>
             <RowDefinition Height="367*"/>
         </Grid.RowDefinitions>
-        <DataGrid Grid.Row="1">
+
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="90"/>
+                <ColumnDefinition />
+                <ColumnDefinition Width="90"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid Grid.Column="0">
+                <Button Grid.Column="2" Click="clRestartListItem" HorizontalAlignment="Center" VerticalAlignment="Center"
+                Style="{StaticResource MaterialDesignFloatingActionMiniButton}">
+                    <Button.Content>
+                        <materialDesign:PackIcon Kind="Restart" Foreground="#FFFFFF"/>
+                    </Button.Content>
+                </Button>
+            </Grid>
+            
+            <ListView Grid.Column="1" x:Name="lvItems" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="HorizontalAlignment" Value="Center"/>
+                        <Setter Property="Margin"  Value="5"/>
+                        <EventSetter Event='MouseDoubleClick' Handler='HandleDoubleClick'/>
+                    </Style>
+
+                </ListView.ItemContainerStyle>
+
+                <ListView.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </ItemsPanelTemplate>
+                </ListView.ItemsPanel>
+
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Width="50" Height="150">
+                            <StackPanel>
+                                <Grid Height="50" 
+                                      Width="50">
+                                    <Border Width="50" Height="50" CornerRadius="360">
+                                        <Border.Background>
+                                            <SolidColorBrush Color="#656565"/>
+                                        </Border.Background>
+                                        <Image  Width="50" Height="50"
+                                            Source="{Binding ImageIcon, TargetNullValue={StaticResource photo}}"/>
+
+                                    </Border>
+                                </Grid>
+                                <TextBlock Text="{Binding NameSubiectum}" HorizontalAlignment="Center" Margin=" 0 20 0 0 " TextWrapping="Wrap" Height="50" FontSize="12" Foreground="#FFFFFF"/>
+                            </StackPanel>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            <Button Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center"
+                Style="{StaticResource MaterialDesignFloatingActionMiniButton}">
+                <Button.Content>
+                    <materialDesign:PackIcon Kind="Add" Foreground="#FFFFFF"/>
+                </Button.Content>
+            </Button>
+        </Grid>
+       
+        
+        
+
+        <DataGrid Grid.Row="1" x:Name="dgItemsList" IsReadOnly="True" AutoGenerateColumns="False" Margin="0 5">
             <DataGrid.Columns>
 
                 <DataGridTemplateColumn Header="Информация учителя" Width="*">
@@ -33,12 +99,14 @@
                             <StackPanel Orientation="Horizontal">
                                 <Border x:Name="brImageTeacher" CornerRadius="360" Width="20" Height="20">
                                     <Border.Background>
-                                        <ImageBrush ImageSource="{Binding Image}" Stretch="UniformToFill" AlignmentY="Top"/>
+                                        <ImageBrush ImageSource="{Binding TeachersNavigation.Photo}" Stretch="UniformToFill" AlignmentY="Top"/>
                                     </Border.Background>
                                 </Border>
-                                <TextBlock/>
-                                <TextBlock/>
-                                <TextBlock/>
+                                <TextBlock Text="{Binding TeachersNavigation.SurnameTeacher}"/>
+                                <TextBlock Text=" "/>
+                                <TextBlock Text="{Binding TeachersNavigation.NameTeacher}"/>
+                                <TextBlock Text=" "/>
+                                <TextBlock Text="{Binding TeachersNavigation.MiddleNameTeacher}"/>
                             </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
@@ -47,20 +115,21 @@
                 <DataGridTemplateColumn Header="Название предмета" Width="*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Name}"/>
+                            <TextBlock Text="{Binding SubiectumNavigation.NameSubiectum}"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn>
+                
+                <DataGridTemplateColumn Header="Опции" Width="100">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <Button x:Name="btEdit">
+                                <Button x:Name="btEdit" Style="{StaticResource MaterialDesignFloatingActionMiniButton}">
                                     <Button.Content>
                                         <materialDesign:PackIcon Kind="Edit" Foreground="#FFFFFF"/>
                                     </Button.Content>
                                 </Button>
-                                <Button x:Name="btDel">
+                                <Button x:Name="btDel" Style="{StaticResource MaterialDesignFloatingActionMiniSecondaryButton}" Margin="5 0 0 0">
                                     <Button.Content>
                                         <materialDesign:PackIcon Kind="Delete" Foreground="#FFFFFF"/>
                                     </Button.Content>
@@ -71,7 +140,7 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button Grid.Row="1" Margin="20 0 0 20" VerticalAlignment="Bottom" HorizontalAlignment="Left" Style="{StaticResource MaterialDesignFloatingActionButton}">
+        <Button Grid.Row="1" Margin="20 0 100 20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Style="{StaticResource MaterialDesignFloatingActionButton}">
             <Button.Content>
                 <materialDesign:PackIcon Kind="Add" Foreground="#FFFFFF"/>
             </Button.Content>
