--- a/Wpf_core_diploma/Pages/pgItemManager.xaml
+++ b/Wpf_core_diploma/Pages/pgItemManager.xaml
@@ -148,7 +148,7 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button Grid.Row="1" Margin="20 0 150 20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Style="{StaticResource MaterialDesignFloatingActionButton}">
+        <Button Grid.Row="1" Click="clAddListItem" Margin="20 0 150 20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Style="{StaticResource MaterialDesignFloatingActionButton}">
             <Button.Content>
                 <materialDesign:PackIcon Kind="Add" Foreground="#FFFFFF"/>
             </Button.Content>
