--- a/Wpf_core_diploma/Window/wdAddItems/wdAddListItemNew.xaml
+++ b/Wpf_core_diploma/Window/wdAddItems/wdAddListItemNew.xaml
@@ -42,7 +42,7 @@
                         </Grid.RowDefinitions>
                         <TextBox x:Name="tbSerchTeacher" materialDesign:HintAssist.Hint="Преподаватель" TextChanged="tcTeacher" Margin="2 0" materialDesign:HintAssist.HintOpacity="1"
                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                        <DataGrid x:Name="dgTeacher" AutoGenerateColumns="False" IsReadOnly="True" Grid.Row="1" Margin="2 4">
+                        <DataGrid SelectedItem="{Binding TeachersNavigation}" x:Name="dgTeacher" AutoGenerateColumns="False" IsReadOnly="True" Grid.Row="1" Margin="2 4">
                             <DataGrid.Columns >
 
                                 <DataGridTemplateColumn Header="ФИО Преподавателя">
@@ -69,7 +69,7 @@
 
                         <TextBox x:Name="tbSerchItems" TextChanged="tcItems" materialDesign:HintAssist.Hint="Предмет" Margin="2 0" materialDesign:HintAssist.HintOpacity="1"
                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                        <DataGrid x:Name="dgSubiecta" AutoGenerateColumns="False" IsReadOnly="True" Grid.Row="1" Margin="2 4">
+                        <DataGrid SelectedItem="{Binding SubiectumNavigation}" x:Name="dgSubiecta" AutoGenerateColumns="False" IsReadOnly="True" Grid.Row="1" Margin="2 4">
                             <DataGrid.Columns >
 
                                 <DataGridTemplateColumn Header="Информация о предмете">
@@ -99,7 +99,7 @@
                         </Grid.RowDefinitions>
                         <TextBox x:Name="tbSerchUser" TextChanged="tcUser" materialDesign:HintAssist.Hint="Ответственный пользователь" Margin="2 0" materialDesign:HintAssist.HintOpacity="1"
                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                        <DataGrid Grid.Row="1" Margin="2 4" IsReadOnly="True" AutoGenerateColumns="False" x:Name="dgUsers">
+                        <DataGrid SelectedItem="{Binding UsersNavigation}" Grid.Row="1" Margin="2 4" IsReadOnly="True" AutoGenerateColumns="False" x:Name="dgUsers">
                             <DataGrid.Columns >
 
                                 <DataGridTemplateColumn Header="ФИО пользователя">
@@ -119,7 +119,7 @@
                     </Grid>
 
                 </Grid>
-                <Button Grid.Row="1" Style="{StaticResource MaterialDesignFlatMidBgButton}" Foreground="#FFFFFF" materialDesign:ButtonAssist.CornerRadius="20" Height="40" 
+                <Button Grid.Row="1" Click="clSaveEdit" Style="{StaticResource MaterialDesignFlatMidBgButton}" Foreground="#FFFFFF" materialDesign:ButtonAssist.CornerRadius="20" Height="40" 
                 VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="150" Margin="0 0 5 5">
                     <Button.Content>
                         <TextBlock Text="Сохранить"/>
