--- a/Wpf_core_diploma/Pages/pgItemManager.xaml
+++ b/Wpf_core_diploma/Pages/pgItemManager.xaml
@@ -132,12 +132,12 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <Button x:Name="btEdit" Style="{StaticResource MaterialDesignFloatingActionMiniButton}">
+                                <Button x:Name="btEdit" Click="clEditItemsNew" Style="{StaticResource MaterialDesignFloatingActionMiniButton}">
                                     <Button.Content>
                                         <materialDesign:PackIcon Kind="Edit" Foreground="#FFFFFF"/>
                                     </Button.Content>
                                 </Button>
-                                <Button x:Name="btDel" Style="{StaticResource MaterialDesignFloatingActionMiniSecondaryButton}" Margin="5 0 0 0">
+                                <Button x:Name="btDel" Click="clDelItemsNew" Style="{StaticResource MaterialDesignFloatingActionMiniSecondaryButton}" Margin="5 0 0 0">
                                     <Button.Content>
                                         <materialDesign:PackIcon Kind="Delete" Foreground="#FFFFFF"/>
                                     </Button.Content>
