--- a/Wpf_core_diploma/Pages/pgSubject.xaml
+++ b/Wpf_core_diploma/Pages/pgSubject.xaml
@@ -59,9 +59,9 @@
                                       Width="150">
                                     <Ellipse Fill="#656565" />
                                     <Image  Width="100" Height="100"
-                                            Source="{Binding ImageIcon, TargetNullValue={StaticResource photo}}"/>
+                                            Source="{Binding SubiectumNavigation.ImageIcon, TargetNullValue={StaticResource photo}}"/>
                                 </Grid>
-                                <TextBlock Text="{Binding NameSubiectum}" HorizontalAlignment="Center" Margin=" 0 20 0 0 " TextWrapping="Wrap" Height="50" FontSize="14" Foreground="#FFFFFF"/>
+                                <TextBlock Text="{Binding SubiectumNavigation.NameSubiectum}" HorizontalAlignment="Center" Margin=" 0 20 0 0 " TextWrapping="Wrap" Height="50" FontSize="14" Foreground="#FFFFFF"/>
                             </StackPanel>
                         </Grid>
                     </DataTemplate>
