--- a/Wpf_core_diploma/Pages/pgGroups.xaml
+++ b/Wpf_core_diploma/Pages/pgGroups.xaml
@@ -19,19 +19,20 @@
 
             <Border MouseUp="muSerch2" Grid.Row="0" Height="37" VerticalAlignment="Top" CornerRadius="18">
                 <Border.Background>
-                    <SolidColorBrush Opacity="0.5" Color="#7C7C7C"/>
+                    <SolidColorBrush Opacity="0.5" Color="#FFFFFF"/>
                 </Border.Background>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock x:Name="tblock" MouseDown="mdSerch" Text="Поиск" VerticalAlignment="Center" Margin="20 0 0 0" FontSize="20" Foreground="#FFFFFF"/>
+                    <TextBlock x:Name="tblock" MouseDown="mdSerch" Text="Поиск" VerticalAlignment="Center" Margin="20 0 0 0" FontSize="20"
+                               Foreground="#000000"/>
                     <TextBox x:Name="tbSerch" TextChanged="tcSerch"
-                         Foreground="#FFFFFF" SelectionTextBrush="Black" SelectionBrush="Black" 
+                         Foreground="#000000" SelectionTextBrush="Black" SelectionBrush="Black" 
                          BorderBrush="Transparent" Background="Transparent" Width="888" Margin="10 0 0 0" 
                          Style="{StaticResource tboxTransperent}"/>
                 </StackPanel>
             </Border>
             <Border Grid.Row="1" CornerRadius="7">
                 <Border.Background>
-                    <SolidColorBrush Color="#7C7C7C" Opacity="0.5"/>
+                    <SolidColorBrush Color="#FFFFFF" Opacity="0.5"/>
                 </Border.Background>
                 <ListView x:Name="lvMain" ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
                       Background="Transparent" Margin="10" BorderBrush="Transparent">
