--- a/Wpf_core_diploma/Pages/pgManagerSections/pgСontrollerAttendance.xaml
+++ b/Wpf_core_diploma/Pages/pgManagerSections/pgСontrollerAttendance.xaml
@@ -64,6 +64,47 @@
                     <Border.Background>
                         <SolidColorBrush Color="#FFFFFF" Opacity="0.5"/>
                     </Border.Background>
+
+                    <ListView Grid.Column="1" x:Name="lvDayWake" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="HorizontalAlignment" Value="Center"/>
+                                <Setter Property="Margin"  Value="5"/>
+                                <EventSetter Event='MouseDoubleClick' Handler='HandleDoubleClick'/>
+                            </Style>
+
+                        </ListView.ItemContainerStyle>
+
+                        <ListView.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </ItemsPanelTemplate>
+                        </ListView.ItemsPanel>
+
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid Width="60" Height="150">
+                                    <StackPanel>
+                                        <Grid Height="60" 
+                                      Width="60">
+                                            <Border Width="60" Height="60" CornerRadius="360">
+                                                <Border.Background>
+                                                    <SolidColorBrush Color="#656565"/>
+                                                </Border.Background>
+                                                <Image  Width="40" Height="40"
+                                            Source="{Binding ImageIcon, TargetNullValue={StaticResource photo}}"/>
+
+                                            </Border>
+                                        </Grid>
+                                        <TextBlock Text="{Binding NameDayWeek}" HorizontalAlignment="Center" Margin=" 0 20 0 0 " TextWrapping="Wrap" Height="50" FontSize="12" Foreground="#000000"/>
+
+                                    </StackPanel>
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+
                 </Border>
             </Grid>
             <Grid Grid.Row="1">
@@ -77,14 +118,15 @@
                     <Border.Background>
                         <SolidColorBrush Color="#FFFFFF" Opacity="0.5"/>
                     </Border.Background>
-                    <DataGrid x:Name="dgNoMark" AutoGenerateColumns="False" Margin="5">
+                    <DataGrid x:Name="dgNoMark" IsReadOnly="True" AutoGenerateColumns="False" Margin="5">
                         <DataGrid.Columns>
                             
                             <DataGridTemplateColumn Header="Студент">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="{Binding StudentsNavigation}" FontSize="15" Foreground="#000000"/>
+                                            <TextBlock Text="{Binding StudentsNavigation.SurnameStudent}" FontSize="15" Foreground="#000000"/>
+                                            <TextBlock Text="{Binding StudentsNavigation.NameStudent}" Margin="5 0 0 0" FontSize="15" Foreground="#000000"/>
                                         </StackPanel>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -94,7 +136,7 @@
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel>
-                                            <Button x:Name="btMarkGo" Style="{StaticResource MaterialDesignFloatingActionMiniButton}"/>
+                                            <Button x:Name="btMarkGo" Click="clMarkAdd" Style="{StaticResource MaterialDesignFloatingActionMiniButton}"/>
                                         </StackPanel>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -108,15 +150,15 @@
                         <SolidColorBrush Color="#FFFFFF" Opacity="0.5"/>
                     </Border.Background>
 
-                    <DataGrid x:Name="dgMark" AutoGenerateColumns="False" Margin="5">
+                    <DataGrid x:Name="dgMark" IsReadOnly="True" AutoGenerateColumns="False" Margin="5">
                         <DataGrid.Columns>
 
                             <DataGridTemplateColumn>
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <StackPanel>
-                                            <TextBlock Text="{Binding StudentsNavigation.SurnameStudent}"/>
-                                            <TextBlock Text="{Binding StudentsNavigation.NameStudent}"/>
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="{Binding StudentsNavigation.SurnameStudent}" FontSize="15" Foreground="#000000"/>
+                                            <TextBlock Text="{Binding StudentsNavigation.NameStudent}" Margin="5 0 0 0" FontSize="15" Foreground="#000000"/>
                                         </StackPanel>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -126,7 +168,7 @@
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel>
-                                            <Button x:Name="btMarkGo" Style="{StaticResource MaterialDesignFloatingActionMiniButton}"/>
+                                            <Button  x:Name="btMarkGo" Style="{StaticResource MaterialDesignFloatingActionMiniButton}"/>
                                         </StackPanel>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
